Lots of changes

--- a/server/assets/client/views/index.html
+++ b/server/assets/client/views/index.html
@@ -3,11 +3,23 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Simple Todo App</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body >
     <div id="App">
 
     </div>
     <script type="text/javascript" src="/js/bundle.js" ></script>
 </body>
+<style>
+    body{
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        max-height: 100%;
+        height: 100%;
+        background-color: #1D2731; /*#FCEBB6;*/
+        font-family: 'Open Sans Condensed', sans-serif;
+    }
+</style>
 </html>
